--- a/JokeApp/app/src/main/res/layout/activity_main.xml
+++ b/JokeApp/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,14 @@
     android:layout_gravity="center_vertical"
     android:orientation="vertical">
 
+    <ImageView
+        android:id="@+id/happy_image"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:src="@drawable/empty_vector"
+        tools:src="@drawable/ic_iconmonstr_smiley_1"/>
+
     <TextView
         android:id="@+id/joke_textview"
         android:layout_width="wrap_content"
@@ -22,5 +30,12 @@
         android:layout_height="wrap_content"
         android:text="Next Joke"
         android:layout_gravity="center_horizontal"/>
+    <Button
+        android:id="@+id/happy_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Good one!"
+        android:layout_gravity="center_horizontal"/>
+
 
 </LinearLayout>
