--- a/JokeApp/app/src/main/res/layout/activity_main.xml
+++ b/JokeApp/app/src/main/res/layout/activity_main.xml
@@ -4,6 +4,12 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto">
+    <data>
+        <variable
+            name="jokes"
+            type="com.example.jokeapp.JokeBook" />
+    </data>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -26,7 +32,7 @@
             android:layout_height="wrap_content"
             android:text=""
             android:layout_gravity="center_horizontal"
-            tools:text="@string/joke_placeholder"
+            tools:text="@{jokes.currentJoke}"
             android:textSize="20sp"
             />
         <Button
