--- a/JokeApp/app/src/main/res/layout/activity_main.xml
+++ b/JokeApp/app/src/main/res/layout/activity_main.xml
@@ -20,6 +20,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
+            android:layout_marginBottom="@dimen/margin_bottom"
             android:contentDescription="@string/smiley_that_indicates_a_funny_joke"
             app:layout_constraintBottom_toTopOf="@+id/joke_textview"
             app:layout_constraintEnd_toEndOf="parent"
@@ -27,17 +28,15 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_chainStyle="packed"
-            app:srcCompat="@drawable/empty_vector"
-            />
+            app:srcCompat="@drawable/empty_vector" />
 
         <TextView
             android:id="@+id/joke_textview"
+            style="@style/joke_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
+            android:layout_marginBottom="@dimen/margin_bottom"
             android:text="@{jokes.currentJoke}"
-            android:textColorHint="@color/teal_200"
-            android:textSize="20sp"
             app:layout_constraintBottom_toTopOf="@+id/nextjoke_button"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
@@ -50,6 +49,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
+            android:layout_marginBottom="@dimen/margin_bottom"
             android:text="@string/next_joke"
             app:layout_constraintBottom_toTopOf="@+id/happy_button"
             app:layout_constraintEnd_toEndOf="parent"
