--- a/JokeApp/app/src/main/res/layout/about_me.xml
+++ b/JokeApp/app/src/main/res/layout/about_me.xml
@@ -39,8 +39,10 @@
         android:fillViewport="true"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/profilepicture_imageview">
+        app:layout_constraintTop_toBottomOf="@+id/profilepicture_imageview"
+        app:layout_constraintVertical_bias="1.0">
 
         <TextView
             android:id="@+id/textView2"
