--- a/JokeApp/app/src/main/res/values/styles.xml
+++ b/JokeApp/app/src/main/res/values/styles.xml
@@ -6,5 +6,6 @@
         <item name="android:fontFamily">@font/roboto</item>
         <item name="android:textColorHint">@color/teal_200</item>
         <item name="android:textSize">20sp</item>
+        <item name="lineSpacing">2dp</item>
     </style>
 </resources>
