--- a/JokeApp/app/src/main/res/layout/fragment_joke.xml
+++ b/JokeApp/app/src/main/res/layout/fragment_joke.xml
@@ -32,8 +32,10 @@
         <TextView
             android:id="@+id/joke_textview"
             style="@style/joke_text"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginEnd="16dp"
             android:layout_marginBottom="@dimen/margin_bottom"
             android:text="@{jokes.currentJoke}"
             app:layout_constraintBottom_toTopOf="@+id/nextjoke_button"
@@ -41,7 +43,8 @@
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/happy_image"
-            tools:text="Here comes a joke" />
+            tools:text="Here comes a joke"
+            android:gravity="center_horizontal"/>
 
         <Button
             android:id="@+id/nextjoke_button"
