--- a/JokeApp/app/src/main/res/values/colors.xml
+++ b/JokeApp/app/src/main/res/values/colors.xml
@@ -7,4 +7,6 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="happy_green">#D89EDD54</color>
+    <color name="sad_red">#B0FF5959</color>
 </resources>
