--- a/JokeApp/app/src/main/res/navigation/navigation.xml
+++ b/JokeApp/app/src/main/res/navigation/navigation.xml
@@ -42,6 +42,13 @@
             app:destination="@id/jokeFragment"
             app:popUpTo="@id/jokeFragment"
             app:popUpToInclusive="true" />
+
+        <argument
+            android:name="numHappyJokes"
+            app:argType="integer" />
+        <argument
+            android:name="numUnhappyJokes"
+            app:argType="integer" />
     </fragment>
     <fragment
         android:id="@+id/sadComedian"
