refactors to viewModel class

--- a/JokeApp/app/src/main/res/layout/fragment_joke.xml
+++ b/JokeApp/app/src/main/res/layout/fragment_joke.xml
@@ -6,7 +6,7 @@
     <data>
         <variable
             name="jokes"
-            type="com.example.jokeapp.JokeBook" />
+            type="com.example.jokeapp.screens.jokes.JokeViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
