adds viewModel with constructor for score view

--- a/JokeApp/app/src/main/res/navigation/navigation.xml
+++ b/JokeApp/app/src/main/res/navigation/navigation.xml
@@ -23,13 +23,10 @@
         <action
             android:id="@+id/action_jokeFragment_to_happyComedian"
             app:destination="@id/happyComedian" />
-        <action
-            android:id="@+id/action_jokeFragment_to_sadComedian"
-            app:destination="@id/sadComedian" />
     </fragment>
     <fragment
         android:id="@+id/happyComedian"
-        android:name="com.example.jokeapp.HappyComedianFragment"
+        android:name="com.example.jokeapp.screens.score.HappyComedianFragment"
         android:label="HappyComedian"
         tools:layout="@layout/fragment_happy_comedian">
         <action
@@ -49,18 +46,6 @@
         <argument
             android:name="numUnhappyJokes"
             app:argType="integer" />
-    </fragment>
-    <fragment
-        android:id="@+id/sadComedian"
-        android:name="com.example.jokeapp.SadComedianFragment"
-        android:label="SadComedian"
-        tools:layout="@layout/fragment_sad_comedian">
-        <action
-            android:id="@+id/action_sadComedian_to_jokeFragment"
-            app:destination="@id/jokeFragment" />
-        <action
-            android:id="@+id/action_sadComedian_to_homeFragment2"
-            app:destination="@id/homeFragment2" />
     </fragment>
     <fragment
         android:id="@+id/aboutFragment"
