--- a/JokeApp/app/src/main/res/layout/fragment_joke.xml
+++ b/JokeApp/app/src/main/res/layout/fragment_joke.xml
@@ -73,6 +73,16 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/nextjoke_button" />
 
+        <TextView
+            android:id="@+id/jokecount_textview"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="16dp"
+            android:layout_marginBottom="16dp"
+            android:text="@{jokes.numberOfJokesString}"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 
