--- a/JokeApp/app/src/main/res/layout/fragment_joke_overview_from_api.xml
+++ b/JokeApp/app/src/main/res/layout/fragment_joke_overview_from_api.xml
@@ -13,20 +13,30 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+        <ImageView
+            android:id="@+id/imageView2"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            app:imageUrl="@{viewModel.apiResponse.smileyUri}"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
         <TextView
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_marginStart="16dp"
-            android:layout_marginTop="16dp"
-            android:layout_marginEnd="16dp"
+            android:layout_marginTop="8dp"
 
+            android:layout_marginEnd="16dp"
             android:layout_marginBottom="16dp"
             android:gravity="center_horizontal"
-            android:text="@{viewModel.apiResponse}"
+            android:text="@{viewModel.apiResponse.body.get(0).punchline}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/imageView2"
             tools:text="api response" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
