--- a/JokeApp/app/src/main/res/layout/fragment_joke_overview_from_api.xml
+++ b/JokeApp/app/src/main/res/layout/fragment_joke_overview_from_api.xml
@@ -14,6 +14,16 @@
         android:layout_height="match_parent">
 
         <ImageView
+            android:id="@+id/status_image"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:jokeApiStatus="@{viewModel.status}" />
+
+        <ImageView
             android:id="@+id/imageView2"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
