adds model joke and repository

--- a/JokeApp/app/src/main/res/layout/fragment_joke_overview_from_api.xml
+++ b/JokeApp/app/src/main/res/layout/fragment_joke_overview_from_api.xml
@@ -29,7 +29,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="32dp"
             android:layout_marginEnd="32dp"
-            app:imageUrl="@{viewModel.apiResponse.smileyUri}"
+            app:imageUrl="@{viewModel.jokes.get(0).smileyUri}"
             app:layout_constraintBottom_toTopOf="@+id/textView4"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -44,7 +44,7 @@
             android:layout_marginStart="16dp"
             android:layout_marginEnd="16dp"
             android:gravity="center_horizontal"
-            android:text="@{viewModel.apiResponse.body.get(0).jokeSetup}"
+            app:jokeSetup="@{viewModel.jokes}"
             app:layout_constraintBottom_toTopOf="@+id/textView3"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -59,7 +59,7 @@
             android:layout_marginStart="16dp"
             android:layout_marginEnd="16dp"
             android:gravity="center_horizontal"
-            android:text="@{viewModel.apiResponse.body.get(0).punchline}"
+            app:jokePunchline="@{viewModel.jokes}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
