--- a/JokeApp/app/src/main/res/layout/fragment_joke.xml
+++ b/JokeApp/app/src/main/res/layout/fragment_joke.xml
@@ -37,7 +37,7 @@
             android:layout_marginStart="16dp"
             android:layout_marginEnd="16dp"
             android:layout_marginBottom="@dimen/margin_bottom"
-            android:text="@{jokes.currentJoke}"
+            app:randomJoke="@{jokes.jokes}"
             app:layout_constraintBottom_toTopOf="@+id/nextjoke_button"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
