--- a/JokeApp/app/src/main/res/values/colors.xml
+++ b/JokeApp/app/src/main/res/values/colors.xml
@@ -9,4 +9,12 @@
     <color name="white">#FFFFFFFF</color>
     <color name="happy_green">#D89EDD54</color>
     <color name="sad_red">#B0FF5959</color>
+    <color name="primaryColor">#669df6</color>
+    <color name="primaryLightColor">#9cceff</color>
+    <color name="primaryDarkColor">#266fc3</color>
+    <color name="secondaryColor">#a142f4</color>
+    <color name="secondaryLightColor">#d774ff</color>
+    <color name="secondaryDarkColor">#6b00c0</color>
+    <color name="primaryTextColor">#000000</color>
+    <color name="secondaryTextColor">#ffffff</color>
 </resources>
