--- a/JokeApp/app/src/main/res/values/styles.xml
+++ b/JokeApp/app/src/main/res/values/styles.xml
@@ -1,26 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <style name="joke_text">
-        <item name="android:layout_gravity">center_horizontal</item>
-        <item name="android:fontFamily">@font/roboto</item>
-        <item name="android:textColorHint">@color/teal_200</item>
-        <item name="android:textSize">20sp</item>
-        <item name="lineSpacing">2dp</item>
+    <style name="AppTheme" parent="Theme.MaterialComponents.Light.NoActionBar">
+        <item name="colorPrimary">@color/primaryColor</item>
+        <item name="colorPrimaryDark">@color/primaryDarkColor</item>
+        <item name="colorPrimaryVariant">@color/primaryLightColor</item>
+        <item name="colorOnPrimary">@color/primaryTextColor</item>
+        <item name="colorSecondary">@color/secondaryColor</item>
+        <item name="colorSecondaryVariant">@color/secondaryDarkColor</item>
+        <item name="colorOnSecondary">@color/secondaryTextColor</item>
+        <!--items here can overwrite existing items from Material design  -->
+        <item name="textAppearanceHeadline6">@style/CustomHeadline6</item>
+    </style>
+
+<!--    Overwriting an element from the Theme in this Style-->
+    <style name="CustomHeadline6" parent="TextAppearance.MaterialComponents.Headline6">
+        <item name = "android:textSize">18sp</item>
     </style>
 
 
-    <style name="MyMaterialTheme.Base" parent="Theme.AppCompat.Light.DarkActionBar">
-        <item name="windowNoTitle">true</item>
-        <item name="windowActionBar">false</item>
-        <item name="colorPrimary">@color/design_default_color_primary</item>
-        <item name="colorPrimaryDark">@color/design_default_color_primary_dark</item>
-        <item name="colorAccent">@color/black</item>
-        <item name="drawerArrowStyle">@style/DrawerArrowStyle</item>
-    </style>
-
-    <style name="DrawerArrowStyle" parent="@style/Widget.AppCompat.DrawerArrowToggle">
-        <item name="spinBars">true</item>
-        <item name="color">@android:color/black</item>
-    </style>
 </resources>
