fixes white text issue

--- a/JokeApp/app/src/main/res/layout/activity_main.xml
+++ b/JokeApp/app/src/main/res/layout/activity_main.xml
@@ -17,7 +17,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
                 android:background="?colorPrimaryDark"
-                android:theme="@style/ThemeOverlay.MaterialComponents.Dark.ActionBar"
+                android:theme="@style/customThemeOverlayBlack"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent">
 
