--- a/JokeApp/app/src/main/res/layout/fragment_joke_overview.xml
+++ b/JokeApp/app/src/main/res/layout/fragment_joke_overview.xml
@@ -14,6 +14,23 @@
         android:layout_height="match_parent"
         tools:context="jokeOverview.JokeOverviewFragment">
 
+        <HorizontalScrollView
+            android:id="@+id/chips"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <com.google.android.material.chip.ChipGroup
+                android:id="@+id/chip_list"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="16dp"
+                app:singleLine="true"
+                app:singleSelection="true" />
+        </HorizontalScrollView>
+
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/joke_list"
             android:layout_width="0dp"
@@ -22,7 +39,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toBottomOf="@+id/chips" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
