--- a/JokeApp/app/src/main/res/layout/chip.xml
+++ b/JokeApp/app/src/main/res/layout/chip.xml
@@ -5,4 +5,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    style="@style/Widget.MaterialComponents.Chip.Choice"/>
+    style="@style/Widget.MaterialComponents.Chip.Choice"
+    app:chipBackgroundColor="@color/selected_highlight"
+    app:checkedIconVisible="true"/>
