--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,7 +3,8 @@
     <dimen name="padding_small">8dp</dimen>
     <dimen name="smallSpacer">16dp</dimen>
     <dimen name="mediumSpacer">24dp</dimen>
-    <dimen name="mediumPadding">24dp</dimen>
+    <dimen name="mediumPadding">16dp</dimen>
+    <dimen name="largePadding">24dp</dimen>
     <dimen name="cardCornerRadius">28dp</dimen>
     <dimen name="drawer_width">160dp</dimen>
     <dimen name="drawer_padding_content">8dp</dimen>
